--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
 <body>
 
-  <div class="relative overflow-x-hidden">
+  <div class="relative overflow-x-hidden w-full">
 
     <!-- NAV SECTION  -->
     <nav class="bg-deepBlue">
-      <div class="relative w-[1090px] mx-auto flex items-center justify-center ">
+      <div class="relative w-[1090px] mx-auto flex items-center justify-between ">
         <!-- logo -->
         <a class="py-3 pr-9 text-white">
           <img src="./Images/logo.svg" width="120px" height="30px" alt="logo">
@@ -154,7 +154,7 @@
     <!-- HERO SECTION  -->
 
     <section class="relative bg-deepBlue">
-      <div class="w-10/12 max-w-[1080px] flex flex-row justify-between items-center mx-auto  ">
+      <div class="w-10/12 max-w-[1080px] flex flex-col lg:flex-row justify-between items-center mx-auto  ">
 
         <!-- LEFT PART -->
         <div class="space-y-10">
@@ -199,8 +199,9 @@
 
 
         <!-- heading start  -->
-        <h3 class="font-mullish text-center text-2xl leading-[1.2] font-extrabold">Accept Payments with Razorpay Payment
+        <h3 class="font-mullish text-center text-2xl leading-[1.2] font-extrabold hidden lg:block md:block">Accept Payments with Razorpay Payment
           Suite</h3>
+          <h1 class="md:hidden lg:hidden block text-center text-[40px] font-extrabold font-mullish">Explor Razorpay payment suite</h1>
         <div class="w-6 h-1 bg-greenLight mx-auto my-4 "></div>
 
 
@@ -236,11 +237,11 @@
 
 
             <!-- for button and hyper link start  -->
-            <div class="flex flex-row space-x-2 items-center mt-7 ">
+            <div class="flex flex-col-reverse w-full lg:w-fit space-x-2 items-center mt-7 md:flex-row sm:flex-row"> 
 
-              <div class="group">
+              <div class="group w-full lg:w-fit">
                 <button class="bg-lightBlue text-white rounded-md font-mullish  font-bold
-           hover:bg-lightBlue w-36 h-12 mr-3 group-hover:bg-blue-600 transition-all duration-200">Sign Up
+           hover:bg-lightBlue  h-12 mr-3 group-hover:bg-blue-600 transition-all duration-200 w-full lg:w-32 ">Sign Up
                   Now <i class="fa-solid fa-right-long" style="color: white;"></i> </button>
 
               </div>
@@ -248,9 +249,9 @@
 
 
               <!-- hyper link start -->
-              <div class="flex items-center group">
+              <div class="flex items-center group self-start w-40 md:self-center">
                 <a href=""
-                  class="text-lightBlue font-bold  group-hover:text-grayBlue transition-all duration-200 text-center">Know
+                  class="text-lightBlue font-bold group-hover:text-grayBlue transition-all duration-200 text-center">Know
                   more ></a>
                 <i></i>
               </div>
@@ -258,7 +259,7 @@
               <!-- hyper link end  -->
             </div>
 
-            <img src="./Images/payment-suite.png" alt="" class="absolute max-w-[550px] right-0 bottom-0">
+            <img src="./Images/payment-suite.png" alt="" class="absolute max-w-[550px] right-0 hidden  bottom-0 sm:w-[600px]  lg:w-[800px] md:block lg:block">
           </div>
 
           <!-- for button and hyper link  end -->
@@ -272,7 +273,7 @@
         <!-- CARD SECTION  -->
 
         <!-- card start  -->
-        <div class="grid w-full grid-cols-3 gap-4 grid-rows-2 mt-16 ">
+        <div class="grid w-full grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-4 mt-16  ">
 
 
           <!-- box no 1 -->
@@ -595,12 +596,12 @@
 
 
             <!-- for button and hyper link start  -->
-            <div class="flex flex-row space-x-2 items-center mt-7 relative">
+            <div class="flex flex-col-reverse lg:flex-row space-x-2 items-center mt-7 relative w-full lg:w-fit ">
 
-              <div class="group">
+              <div class="group w-full ">
                 <button
                   class="relative bg-lightBlue flex items-center text-white rounded-md font-mullish  font-bold
-                      hover:bg-lightBlue py-[14px] px-[18px] group-hover:bg-blue-600 transition-all duration-200 w-40 ">Sign
+                      hover:bg-lightBlue py-[14px] px-[18px] group-hover:bg-blue-600 transition-all text-center duration-200 w-full md:w-40 lg:w-40 ">Sign
                   Up
 
                   <div
@@ -614,9 +615,9 @@
 
 
               <!-- hyper link start -->
-              <div class="flex items-center group">
+              <div class="flex items-center group self-start lg:self-center">
                 <a href=""
-                  class="text-lightBlue font-bold  group-hover:text-grayBlue transition-all duration-200 text-center">Know
+                  class="text-lightBlue font-bold  group-hover:text-grayBlue transition-all duration-200 text-center w-40">Know
                   more ></a>
                 <i></i>
               </div>
@@ -624,7 +625,7 @@
               <!-- hyper link end  -->
             </div>
 
-            <img src="./Images/buisness-banking.png" alt="" class="absolute max-w-[550px] right-0 bottom-0">
+            <img src="./Images/buisness-banking.png" alt="" class="absolute max-w-[550px] right-0 bottom-0 hidden md:block lg:block">
           </div>
 
           <!-- for button and hyper link  end -->
@@ -634,7 +635,7 @@
 
         <!-- card  -->
         <div>
-          <div class="grid w-full grid-cols-3 gap-4 grid-rows-1 mt-16 ">
+          <div class="grid w-full grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4  mt-16  ">
 
             <!-- box no 1 -->
             <div
@@ -776,7 +777,7 @@
           <div
             class="w-full border flex flex-row relative items-center justify-between mt-14 p-8 rounded-md border-gray-700">
 
-            <p class="text-white text-xl font-mullish opacity-90">Check out the live demo to learn how RazorpayX
+            <p class="text-white text-xl font-mullish opacity-90 hidden lg:block md:block">Check out the live demo to learn how RazorpayX
               works.<span class="font-bold font-mullish">No sign-up required!</span> </p>
             <div class="group">
               <button class="relative bg-lightBlue flex items-center text-white rounded-md font-mullish  font-bold
@@ -807,7 +808,7 @@
         class="absolute w-[233px] -right-[3.5rem] -top-[6rem] z-[10]">
 
 
-      <div class="w-full grid grid-cols-3 gap-y-10 gap-x-4 relative z-[10] ">
+      <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-y-10 gap-x-4 relative z-[10] ">
         <!-- Item 1 -->
         <div class="relative flex items-center -z-[100]">
           <h2 class="text-deepBlueHead font-mullish font-extrabold text-4xl leading-[3.375rem]">New In the
@@ -899,10 +900,10 @@
   </section>
 
 
-  <!--CoreFeature Section-->
+  <!--Core Feature Section-->
 
   <section class="bg-[url(/images/core-features-sectionBg.svg)] bg-no-repeat bg-cover bg-center relative p-10 ">
-    <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4 core-feature-section">
+    <div class="relative w-11/12 max-w-[1080px] mx-auto pt-4 core-feature-section ">
       <h2 class="font-mullish font-bold text-white text-2xl text-center relative mt-1"> Features</h2>
       <div class="w-6 h-1 bg-greenLight mx-auto mt-4 mb-6"></div>
       <p class="font-mullish text-center mx-w-[450px] mx-auto text-white">Empower your business with all the right tools
@@ -910,7 +911,7 @@
         <br> payments and provide the best customer experience
       </p>
 
-      <div class="grid grid-cols-4 grid-rows-2 gap-[2rem] mt-8 ">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4  grid-rows-2 gap-[2rem] mt-8 ">
         <!-- card 1 -->
 
         <div class="space-y-3">
@@ -971,9 +972,9 @@
 
   <!-- join razarpay section -->
   <section class="bg-[#f5f8fe] relative pt-40 pb-12 -mt-[200px] -z-[100]">
-    <div class=" max-w-[1080px] mx-auto w-11/12 flex flex-row">
+    <div class=" max-w-[1080px] mx-auto w-11/12 flex flex-col lg:flex-row">
       <!-- part left -->
-      <div class="relative  flex flex-col gap-3 mx-auto max-w-[calc(100%-500px)] mt-[5.5rem]">
+      <div class="relative mb-10 flex flex-col gap-3 mx-auto lg:max-w-[calc(100%-500px)] mt-[5.5rem] w-full lg:w-[fit] ">
         <h2 class="font-mullish font-extrabold text-2xl text-black ">Join the 50,00,000 businesses using Razorpay</h2>
         <div class="w-6 h-1 bg-greenLight mb-10"></div>
         <p class="font-mullish opacity-80">We make it easier for you to focus on building great products while we work
@@ -987,7 +988,7 @@
       <!-- left part end-->
 
       <!-- right part-->
-      <div class="h-[500px] w-[500px] relative  overflow-y-hidden">
+      <div class="h-[500px] w-[500px] relative  overflow-y-hidden self-center">
 
         <div style="background: linear-gradient(180deg, #f4f8ff, #fff0)" class="absolute w-full h-[150px] top-0 z-50">
         </div>
@@ -1033,7 +1034,7 @@
 
 
 
-      <div class="flex flex-dire max-w-[960px] items-center mx-auto my-20 space-x-16">
+      <div class="flex flex-col lg:flex-row max-w-[960px] items-center mx-auto my-20 space-x-16 ">
         <!-- left part  -->
 
         <div>
