--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
 
-  <div class="relative overflow-x-hidden w-full">
+  <div class="overflow-x-hidden relative w-full">
 
     <!-- NAV SECTION  -->
     <nav class="bg-deepBlue">
@@ -121,12 +121,12 @@
           <button class="text-white h-10  font-mullish  px-5 border-lightBlue border text-sm
                                 ">Log in</button>
           <button class="font-bold h-10  text-blue-500 font-mullish  px-5 bg-white text-sm
-                                ">Sign Up
-                                <svg
+                                ">Sign Up 
+                                <!-- <svg
                                 viewBox="0 0 24 24"
                                 focusable="false"
                                 class="w-[14px] h-[14px] ml-3"
-                              >
+                              > -->
             <!-- <i class="fa-regular fa-arrow-right" style="color: black;"></i> -->
             <!-- <svg
                                 viewBox="0 0 24 24"
@@ -565,7 +565,7 @@
       <!-- main feature box -->
       <div class="w-full min-h-[440px] flex flex-col relative bg-de">
         <img src="./Images/x-flame-1.png" alt="" class="absolute -top-[70px] -left-[140px] w-[200px]" loading="lazy">
-        <img src="./Images/x-flame-2.png" alt="" class="absolute top-[150px] -right-[180px] w-[270px] ">
+        <img src="./Images/x-flame-2.png" alt="" class="absolute top-[150px] -right-[180px] w-[270px] " Loading="lazy">
 
         <!-- content box  -->
         <div
